...
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/buttonWrap5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/buttonWrap2"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="37dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/agapanthus" />

            <ImageButton
                android:id="@+id/buttonOrnament2"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_below="@+id/editText5"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="21dp"
...
                app:srcCompat="@drawable/anthurium" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_below="@+id/buttonLilies"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
...
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_below="@+id/ButtonHome"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="45dp"
                android:layout_toEndOf="@+id/buttonRoses"
                android:layout_toRightOf="@+id/buttonRoses"
                android:contentDescription="@string/Germini"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/germini" />
...
                android:ems="10"
                android:text="@string/Step3"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonWrap6"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="267dp"
...
