<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="#141315">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"

        >


        <ImageView
            android:layout_width="156dp"
            android:layout_height="157dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/fifi2"
            android:contentDescription="TODO"></ImageView>

        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/idUsername"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_user"
            android:textColor="@color/colorAccent"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:hint="Username"
            android:inputType="text"
            android:autofillHints="">
        </EditText>

        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/idPassword"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:background="@drawable/login_user"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:autofillHints="">

        </EditText>
        
        <Button
            android:layout_width="match_parent"
            android:id="@+id/idSignIn"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="Sign in"
            android:textSize="21sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            >

        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_background"
            android:text="Sign up"
            android:id="@+id/idRegister"
            android:textSize="15sp"
            android:textColor="#141315"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"
            >

        </Button>


</LinearLayout>


</RelativeLayout>