<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E4D9E3"
    tools:context=".activities.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutReset">

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="180dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-10dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/buttonHome"
        android:background="@drawable/background_button"
        android:src="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/customBouquet"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_alignStart="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/background_button"
        android:src="@drawable/buton3">

    </ImageButton>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="My profile"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp" />

    <Button
        android:id="@+id/SignOut"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:background="@color/colorAccent"
        android:text="Sign Out"
        android:textColor="#141315"
        android:textSize="20dp"
    />

    <Button
        android:id="@+id/reset"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="300dp"
        android:background="@color/colorAccent"
        android:text="@string/Reset_password"
        android:textColor="#141315"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/feedbackText"
        android:layout_width="377dp"
        android:layout_height="198dp"
        android:layout_below="@+id/reset"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="107dp"
        android:background="@color/colorText"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/sendFeedbackButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/reset"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="343dp"
        android:background="@color/colorAccent"
        android:text="@string/send_feedback"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/reset"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="56dp"
        android:background="@color/colorAccent"
        android:text="@string/feedback"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/feedbackHeadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="71dp"
        android:text="@string/feedbackHead"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


</RelativeLayout>
    </ScrollView>>
</androidx.constraintlayout.widget.ConstraintLayout>