<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:background="#141315">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"

        >


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/fifi2"></ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/sign_up_page"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="First Name:"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/idFirstName"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_background"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:padding="10dp"
            >
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="Last Name:"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/idLastName"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_background"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:padding="10dp"
            >
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="Username:"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/idUsernameR"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_background"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:inputType="text">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/password"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/idPasswordR"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_background"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:autofillHints=""
            android:inputType="textPassword">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="Confirm password"
            android:textSize="20dp"></TextView>

        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/idConfirmPasswordR"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_background"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:autofillHints=""
            android:inputType="textPassword">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="E-mail:"
            android:textSize="20dp"
            >
        </TextView>
        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/idEmail"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_background"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:autofillHints=""
            android:inputType="text">
        </EditText>




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_background"
            android:text="@string/register"
            android:id="@+id/idRegister"
            android:textSize="15sp"
            android:textColor="#141315"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="40dp"
            >

        </Button>


</LinearLayout>
</ScrollView>


</RelativeLayout>